--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="connection_status">Connection Status：</string>
     <string name="not_connected">Not Connected</string>
     <string name="byte_content">Byte Content：</string>
+    <string name="start_record">Start Record</string>
+    <string name="stop_record">Stop Record</string>
 </resources>
