Second Version committed. Features available: Hand select device to connect to; ble running as service; plot real time data; record EMG data as 16bit PCM to local storage at intervals of 30sec on demand; fft and median frequency added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="byte_content">Byte Content：</string>
     <string name="start_record">Start Record</string>
     <string name="stop_record">Stop Record</string>
+    <string name="median">Median Frequency:</string>
+    <string name="wait">Waiting...</string>
 </resources>
